# sudokuProject

./: .gitignore  CMakeLists.txt  sudoku9.txt
SudodusResolus/: sudoku1.txt  sudoku10.txt  sudoku11.txt  sudoku12.txt  sudoku13.txt  sudoku14.txt  sudoku15.txt  sudoku16.txt  sudoku17.txt  sudoku18.txt  sudoku19.txt  sudoku2.txt  sudoku20.txt  sudoku3.txt  sudoku4.txt  sudoku5.txt  sudoku6.txt  sudoku7.txt  sudoku9.txt
src/: bactracking.c  brute_force.c  ecriture_solution.c  lecture_fichier.c  sudoku.c  sudoku.h  sudokuBuffer.c
